fix: flicker layoouts with loading

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -1,6 +1,13 @@
 .layout {
   .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    position: relative;
   }
 }
 
